@@ -1,15 +1,16 @@
 # Reference
+
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
 ## Table of Contents
 
-**Classes**
+### Classes
 
 * [`acpid`](#acpid): This class provides for the setup of the ACPI management subsystem.  This will eventually grow to encompass all acpid capabilities.  NOTE: Th
 
 ## Classes
 
-### acpid
+### <a name="acpid"></a>`acpid`
 
 This class provides for the setup of the ACPI management subsystem.
 
@@ -20,13 +21,15 @@ They will deliberately step on one another.
 
 #### Parameters
 
-The following parameters are available in the `acpid` class.
+The following parameters are available in the `acpid` class:
 
-##### `ensure`
+* [`ensure`](#ensure)
+
+##### <a name="ensure"></a>`ensure`
 
 Data type: `String`
 
 Management of the acpid package.
 
-Default value: simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })
+Default value: `simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })`
 
